2008-04-10  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/bugs.texi: remove deprecated Nexusware support
	* openss7.spec.in: remove deprecated Nexusware support
	* m4/kernel.m4: remove deprecated Nexusware support
	* doc/manual/install.texi: remove deprecated Nexusware support
	* doc/manual/texi/install.texi: remove deprecated Nexusware support
	* doc/manual/todo.texi: remove deprecated Nexusware support
	* Makefile.am: remove deprecated Nexusware support
	* scripts/texi/compat.texi: remove deprecated Nexusware support
	* scripts/texi/install.texi: remove deprecated Nexusware support
	* texi/install.texi: remove deprecated Nexusware support
	* am/release.am: remove deprecated Nexusware support

	* scripts/text/compat.texi: added new distros

	* AUTHORS: updated release files
	* NEWS: updated release files
	* README: updated release files
	* README-cvs: updated release files
	* THANKS: updated release files

2007-12-30  Brian Bidulock  <bidulock@openss7.org>

	* am/man.am: perform more substitutions
	* m4/openss7.m4: remove strict prototypes
	* mibs/OPENSS7-MIB.mib: added common MIBS
	* mibs/OPENSS7-SMI.mib: added common MIBS
	* mibs/OPENSS7-TC.mib: added common MIBS
	* mibs/OPENSS7-TMN-SMI.mib: added common MIBS
	* mibs/OPENSS7-TMN-TC.mib: added common MIBS
	* snmp/ds_agent.h: added common SNMP files
	* snmp/header_complex.h: added common SNMP files
	* snmp/mib2c: added common SNMP files
	* snmp/mib2c.conf: added common SNMP files
	* snmp/mib2c.openss7.conf: added common SNMP files
	* snmp/mib2c.storage.conf: added common SNMP files
	* snmp/mib2c.vartypes.conf: added common SNMP files
	* snmp/mib_modules.h: added common SNMP files
	* snmp/struct.h: added common SNMP files
	* snmp/util_funcs.h: added common SNMP files

2007-12-16  Brian Bidulock  <bidulock@openss7.org>

	* am/archive.am: upgrade license to AGPLv3.
	* am/autotest.am: upgrade license to AGPLv3.
	* am/bcm.am: upgrade license to AGPLv3.
	* am/deb.am: upgrade license to AGPLv3.