@@ -1,5 +1,6 @@
 2008-04-10  Brian Bidulock  <bidulock@openss7.org>
 
+	* scripts/modpost.sh: handle new EXPORT_UNUSED_SYMBOL
 	* doc/manual/bugs.texi: remove deprecated Nexusware support
 	* openss7.spec.in: remove deprecated Nexusware support
 	* m4/kernel.m4: remove deprecated Nexusware support
